package com.rodrigs.finance_manager_api.user.entity;

import com.rodrigs.finance_manager_api.shared.exception.OnboardingVersionLaterException;
import com.rodrigs.finance_manager_api.shared.exception.OnboardingVersionPreviousException;
import com.rodrigs.finance_manager_api.user.dto.UpdateOnboardingRequestDTO;
import jakarta.persistence.*;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;

import java.io.Serial;
import java.io.Serializable;
import java.time.OffsetDateTime;
import java.util.Objects;
import java.util.UUID;

// A entidade User representa um usuário do sistema de gerenciamento financeiro. Ela é mapeada para a tabela "users" no banco de dados e contém informações essenciais sobre o usuário, como nome, email e hash da senha. Além disso, possui campos de auditoria para rastrear quando o usuário foi criado e atualizado.
@Entity
@Table(name = "users")
public class User implements Serializable {
    @Serial
    private static final long serialVersionUID = 1L;

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    @Column(name = "id", nullable = false)
    private UUID id;

    @Column(name = "name", nullable = false, length = 100)
    private String name;

    @Column(name = "email", nullable = false, length = 254)
    private String email;

    @Column(name = "password_hash", nullable = false, length = 255)
    private String passwordHash;

    // Timestamps são para auditoria e rastreamento de alterações, não devem ser expostos diretamente em APIs públicas.
    @CreationTimestamp
    @Column(name = "created_at", nullable = false, updatable = false)
    private OffsetDateTime createdAt;

    @UpdateTimestamp
    @Column(name = "updated_at", nullable = false)
    private OffsetDateTime updatedAt;

    @Column(name = "onboarding_version", nullable = false)
    private int onboardingVersion;

    public User() {}

    public User(String name, String email, String passwordHash) {
        this.name = name;
        this.email = email;
        this.passwordHash = passwordHash;
    }

    public UUID getId() {
        return id;
    }

    public String getName() {
        return name;
    }

    public String getEmail() {
        return email;
    }


    public String getPasswordHash() {
        return passwordHash;
    }

    public OffsetDateTime getCreatedAt() {
        return createdAt;
    }

    public OffsetDateTime getUpdatedAt() {
        return updatedAt;
    }

    public int getOnboardingVersion() {
        return onboardingVersion;
    }

    public void setName(String name) {
        this.name = name;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public void setPasswordHash(String passwordHash) {
        this.passwordHash = passwordHash;
    }

    @Override
    public boolean equals(Object o) {
        if (o == null || getClass() != o.getClass()) return false;
        User user = (User) o;
        return Objects.equals(id, user.id);
    }

    @Override
    public int hashCode() {
        return Objects.hashCode(id);
    }

    @Override
    public String toString() {
        return "User{" +
                "id=" + id +
                ", name='" + name + '\'' +
                ", email='" + email + '\'' +
                ", createdAt=" + createdAt +
                ", updatedAt=" + updatedAt +
                ", onboardingVersion=" + onboardingVersion +
                '}';
    }

    // Método para avançar a versão de onboarding do usuário. Ele garante que a versão solicitada seja maior ou igual à versão atual.
    //  Se a versão solicitada for menor, lança uma exceção. Se for igual, não faz nada. Se for maior, atualiza a versão de onboarding.
    public void advanceOnboardingVersion(int requestedVersion) {
        if (requestedVersion < this.onboardingVersion) {
            throw new OnboardingVersionPreviousException();
        }
        if (requestedVersion == this.onboardingVersion) {
            return; // Sem mudança necessária, a versão solicitada é igual à versão atual.
        }

        // Se a versão solicitada for maior que a versão atual, atualizamos a versão de onboarding.
        this.onboardingVersion = requestedVersion;
    }
}
